--- a/src/styles/Deck.css
+++ b/src/styles/Deck.css
@@ -1,6 +1,8 @@
 .deck-container {
     margin-left: auto;
     margin-right: auto;
+    padding-top: 2rem;
+    padding-bottom: 2rem;
     padding-left: 1rem;
     padding-right: 1rem;
     width: 100%;
